[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sd-lock-utility"
dynamic = ["version"]
description = "CLI utility tool for SD Connect encrypted object storage."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "CSC Developers" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Environment :: Console",
    "Topic :: Communications :: File Sharing",
]
dependencies = [
    "aiohttp==3.9.3",
    "click==8.1.7",
    "crypt4gh==1.6",
    "aiofiles==23.2.1",
]

[project.optional-dependencies]
test = [
    "black==24.2.0",
    "coverage==7.4.1",
    "flake8-docstrings==1.7.0",
    "flake8==7.0.0",
    "mypy==1.8.0",
    "pytest-cov==4.1.0",
    "pytest-xdist==3.5.0",
    "pytest==8.0.0",
    "tox==4.12.1",
]

dev = [
    "pre-commit==3.6.1",
    "pyspelling==2.10",
    "ruff==0.2.1",
    "types-aiofiles==23.2.0.20240106",
]

[project.scripts]
sd-lock = "sd_lock_utility.cli:lock"
sd-unlock = "sd_lock_utility.cli:unlock"
sd-pubkey = "sd_lock_utility.cli:pubkey"

[project.urls]
Source = "https://github.com/CSCfi/sd-lock-util"
Documentation = "https://github.com/CSCfi/sd-lock-util"

[tool.hatch.version]
path = "sd_lock_utility/__init__.py"

[tool.black]
line-length = 90
target-version = ['py310']

[tool.isort]
atomic = true
profile = "black"
line_length = 90
py_version=310

[tool.ruff]
line-length = 90
target-version = "py310"

# https://beta.ruff.rs/docs/rules/
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    # "ANN",   # flake8-annotations
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "D",   # pydocstyle
#    "UP",  # pyupgrade
    "S",   # Bandit
]

ignore = [
    "ANN101",  # Missing type annotation for `self` in method
    "E501",    # line too long, handled by black
    "B904",    # do not perform function calls in argument defaults
    "PLR2004", # magic value used in comparison
    "S113",    # Probable use of requests call without timeout
    "D203",    # one-blank-line-before-class
    "D213",    # multi-line-summary-second-line
]

[tool.ruff.mccabe]
max-complexity = 20
